--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@shopify/flash-list": "1.4.0",
+    "axios": "^1.4.0",
+    "clamp": "^1.0.1",
     "expo": "~48.0.15",
+    "expo-dev-client": "~2.2.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-localization": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-native": "0.71.7"
   },
