--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@shopify/flash-list": "1.4.0",
+    "@shopify/flash-list": "1.6.3",
     "axios": "^1.4.0",
     "clamp": "^1.0.1",
-    "expo": "~48.0.15",
-    "expo-dev-client": "~2.2.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-localization": "~14.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~50.0.5",
+    "expo-dev-client": "~3.3.8",
+    "expo-linear-gradient": "~12.7.1",
+    "expo-localization": "~14.8.3",
+    "expo-status-bar": "~1.11.1",
     "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-swipe-cards": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
